--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -60,48 +60,48 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>143134</th>\n",
-       "      <td>143134</td>\n",
-       "      <td>1.02</td>\n",
+       "      <th>29036</th>\n",
+       "      <td>29036</td>\n",
+       "      <td>1.13</td>\n",
        "      <td>Premium</td>\n",
-       "      <td>G</td>\n",
+       "      <td>J</td>\n",
        "      <td>VS2</td>\n",
-       "      <td>59.3</td>\n",
+       "      <td>61.2</td>\n",
        "      <td>59.0</td>\n",
-       "      <td>6.50</td>\n",
-       "      <td>6.56</td>\n",
-       "      <td>3.88</td>\n",
-       "      <td>6486</td>\n",
+       "      <td>6.71</td>\n",
+       "      <td>6.67</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>5049</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>98928</th>\n",
-       "      <td>98928</td>\n",
-       "      <td>1.01</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>D</td>\n",
-       "      <td>SI2</td>\n",
-       "      <td>64.3</td>\n",
+       "      <th>66208</th>\n",
+       "      <td>66208</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>Very Good</td>\n",
+       "      <td>H</td>\n",
+       "      <td>VVS2</td>\n",
+       "      <td>62.2</td>\n",
        "      <td>58.0</td>\n",
-       "      <td>6.27</td>\n",
-       "      <td>6.32</td>\n",
-       "      <td>4.03</td>\n",
-       "      <td>4060</td>\n",
+       "      <td>4.29</td>\n",
+       "      <td>4.36</td>\n",
+       "      <td>2.69</td>\n",
+       "      <td>717</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            id  carat      cut color clarity  depth  table     x     y     z  \\\n",
-       "143134  143134   1.02  Premium     G     VS2   59.3   59.0  6.50  6.56  3.88   \n",
-       "98928    98928   1.01     Good     D     SI2   64.3   58.0  6.27  6.32  4.03   \n",
+       "          id  carat        cut color clarity  depth  table     x     y     z  \\\n",
+       "29036  29036   1.13    Premium     J     VS2   61.2   59.0  6.71  6.67  4.10   \n",
+       "66208  66208   0.31  Very Good     H    VVS2   62.2   58.0  4.29  4.36  2.69   \n",
        "\n",
-       "        price  \n",
-       "143134   6486  \n",
-       "98928    4060  "
+       "       price  \n",
+       "29036   5049  \n",
+       "66208    717  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,28 +211,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-1.06035577, -0.66402845, -0.63981151, ...,  4.        ,\n",
-       "         1.        ,  5.        ],\n",
-       "       [-0.93061192,  1.36605897,  0.92462733, ...,  2.        ,\n",
-       "         1.        ,  1.        ],\n",
-       "       [ 0.23708271,  1.55061237,  0.92462733, ...,  1.        ,\n",
-       "         2.        ,  2.        ],\n",
+       "array([[-0.82208996, -0.38796581,  0.92005842, ...,  3.        ,\n",
+       "         3.        ,  3.        ],\n",
+       "       [-1.06006905,  0.07323712, -1.16229678, ...,  4.        ,\n",
+       "         1.        ,  2.        ],\n",
+       "       [-1.03843459, -1.1258905 ,  0.92005842, ...,  2.        ,\n",
+       "         1.        ,  6.        ],\n",
        "       ...,\n",
-       "       [-1.06035577,  1.27378227, -0.63981151, ...,  2.        ,\n",
-       "         4.        ,  5.        ],\n",
-       "       [-1.01710782,  1.18150556, -0.63981151, ...,  1.        ,\n",
-       "         2.        ,  4.        ],\n",
-       "       [ 1.66426503, -2.97094598,  0.92462733, ...,  3.        ,\n",
-       "         3.        ,  3.        ]])"
+       "       [ 1.53606652,  0.9034024 ,  0.39946962, ...,  2.        ,\n",
+       "         1.        ,  1.        ],\n",
+       "       [ 0.8437637 , -0.01900346, -0.12111918, ...,  4.        ,\n",
+       "         5.        ,  3.        ],\n",
+       "       [ 0.49761229, -0.84916874,  0.39946962, ...,  3.        ,\n",
+       "         0.        ,  2.        ]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,6 +272,152 @@
     "        'Ridge':Ridge(),\n",
     "        'ElasticNet':ElasticNet()}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([LinearRegression(), Lasso(), Ridge(), ElasticNet()])"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['LinearRegression', 'Lasso', 'Ridge', 'ElasticNet'])"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trained_model_list=list(),\n",
+    "model_list=list(),\n",
+    "r2_list=list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(model_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearRegression\n",
+      "Model Training Performance\n",
+      "RMSE: 1018.3264149244563\n",
+      "MAE: 675.7259395104601\n",
+      "R2 score 93.61479340528336\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "Lasso\n",
+      "Model Training Performance\n",
+      "RMSE: 1018.3226876627255\n",
+      "MAE: 676.9046917868982\n",
+      "R2 score 93.61484014725585\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "Ridge\n",
+      "Model Training Performance\n",
+      "RMSE: 1018.3081465293509\n",
+      "MAE: 675.750091783326\n",
+      "R2 score 93.61502249966586\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "ElasticNet\n",
+      "Model Training Performance\n",
+      "RMSE: 1515.8190535160102\n",
+      "MAE: 1056.0391938476018\n",
+      "R2 score 85.8519802177274\n",
+      "===================================\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(list(models))):\n",
+    "    model=(list(models.values())[i])\n",
+    "    model.fit(x_train,y_train)\n",
+    "    y_pred=model.predict(x_test)\n",
+    "    mae=mean_absolute_error(y_test,y_pred)\n",
+    "    mse=mean_squared_error(y_test,y_pred)\n",
+    "    rmse=np.sqrt(mse)\n",
+    "    r2_square=r2_score(y_test,y_pred)\n",
+    "    print(list(models.keys())[i])\n",
+    "    #model_list.append(list(models.keys())[i])\n",
+    "\n",
+    "    print('Model Training Performance')\n",
+    "    print(\"RMSE:\",rmse)\n",
+    "    print(\"MAE:\",mae)\n",
+    "    print(\"R2 score\",r2_square*100)\n",
+    "\n",
+    "    r2_list.append(r2_square)\n",
+    "    \n",
+    "    print('='*35)\n",
+    "    print('\\n')\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
